# tv-kan-chk

./: dev-requirements.txt  pyproject.toml
.github/workflows/: main.yml  setup.yml
docs/source/: conf.py  index.rst  installation.md
test/: " 4 GDL".m3u8  " 8 MTY".m3u8  " GOLDEN PLUS".m3u8  " HBO ES HD Uruk".m3u8  " HBO INDEX ".m3u8  " LAS ESTRELLAS LATAM".m3u8  " LAS ESTRELLAS MX".m3u8  "".m3u8  my-fixed-playlist.m3u
tvKanChk/: __init__.py  __main__.py  checker.py  cli.py  simpleiptv.py  simplepls.py
